Let JsonReader.list hold the nulls its element reader answers
JsonReader.list collected the elements with List.copyOf, which throws
NullPointerException on a null, so a reader that answered null for a JSON
null made a body holding one a 500. JsonReader's type parameter now admits a
nullable type, and the list is returned unmodifiable through
Collections.unmodifiableList, which holds a null as it stands.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>